--- a/style.css
+++ b/style.css
@@ -5,3 +5,16 @@ body {
 .max-viewport {
   min-height: 100vh;
 }
+
+.viewport-50 {
+  min-height: 50vh;
+}
+
+.download {
+  background: linear-gradient(to left, rgba(0,0,25,0.3),rgba(0,0,25,0.9)), url(images/background.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
