--- a/style.css
+++ b/style.css
@@ -30,3 +30,11 @@ body {
   background-color: darkgray;
   color: whitesmoke;
 }
+
+#lower-banner {
+  background: url(images/background2.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
